apps/webstudio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webstudio
  labels:
    pod-security.kubernetes.io/enforce: baseline
