apps/webstudio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webstudio
  namespace: webstudio
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - webstudio.${DOMAIN}
      secretName: webstudio-tls
  rules:
    - host: webstudio.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webstudio-builder
                port:
                  number: 3000
